--- a/scss/style.css
+++ b/scss/style.css
@@ -1,9 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,900|Montserrat|Roboto");
-body {
-  background: -webkit-gradient(linear, left top, right top, from(#3FB6A8), to(#7ED386));
-  background: linear-gradient(to right, #3FB6A8, #7ED386);
-}
-
 .containere {
   background: #FFFFFF;
   width: 540px;
@@ -15,7 +10,7 @@ body {
           box-shadow: 2px 5px 20px rgba(119, 119, 119, 0.5);
 }
 
-.logo {
+.logo1 {
   float: right;
   margin-right: 12px;
   margin-top: 12px;
