--- a/scss/style.css
+++ b/scss/style.css
@@ -1,13 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,900|Montserrat|Roboto");
 .containere {
-  background: #FFFFFF;
+  background: #E8EAEE;
   width: 540px;
   min-height: 480px;
   margin: 0 auto;
   position: relative;
   margin-top: 10%;
-  -webkit-box-shadow: 2px 5px 20px rgba(119, 119, 119, 0.5);
-          box-shadow: 2px 5px 20px rgba(119, 119, 119, 0.5);
+  -webkit-box-shadow: 2px 2px 31px 10px rgba(9, 13, 27, 0.31);
+          box-shadow: 2px 2px 31px 10px rgba(9, 13, 27, 0.31);
+  border-radius: 50px;
 }
 
 .logo1 {
@@ -21,51 +22,26 @@
   letter-spacing: 1px;
 }
 
-.CTA {
-  width: 80px;
-  height: 40px;
-  right: -20px;
-  bottom: 0;
-  margin-bottom: 90px;
-  position: absolute;
-  z-index: 1;
-  background: #7ED386;
-  font-size: 1em;
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-  cursor: pointer;
-}
-
-.CTA h1 {
-  color: #FFFFFF;
-  margin-top: 10px;
-  margin-left: 9px;
-}
-
-.CTA:hover {
-  background: #3FB6A8;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-}
-
 .leftbox {
   float: left;
-  top: -5%;
+  top: 5%;
   left: 5%;
   position: absolute;
   width: 15%;
-  height: 110%;
-  background: #7ED386;
-  -webkit-box-shadow: 3px 3px 10px rgba(119, 119, 119, 0.5);
-          box-shadow: 3px 3px 10px rgba(119, 119, 119, 0.5);
+  height: auto;
+  background: #F1F3F9;
+  border: 2px solid #FFFFFF;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 3px 4px 20px -4px rgba(64, 89, 166, 0.3);
+          box-shadow: 3px 4px 20px -4px rgba(64, 89, 166, 0.3);
+  border-radius: 63px;
 }
 
 nav a {
   list-style: none;
-  padding: 35px;
-  color: #FFFFFF;
+  padding: 30px;
+  color: #556882;
   font-size: 1.1em;
   display: block;
   -webkit-transition: all .3s ease-in-out;
@@ -143,7 +119,7 @@ nav a:first-child {
   text-transform: uppercase;
   font-size: 10px;
   border: none;
-  color: #3FB6A8;
+  color: #556882;
 }
 
 .btn:hover {
