--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,77 @@ body
 {
   color:#f2f2f2;
 }
+
+.main_title {
+  font-family: 'Source Sans Pro', sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 48px;
+line-height: 60px;
+padding-bottom: 30px;
+margin-top: 80px;
+text-align: center;
+color: #001c43;
+}
+
+.box {
+  border-radius: 3px;
+/*box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
+  padding: 38px 30px;
+  text-align: right;
+  display: block;
+/* margin-top: 60px; */cursor: pointer;
+}
+.box-icon span {
+color: #fff;
+display: table-cell;
+text-align: center;
+vertical-align: middle;
+}
+.info h4 {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  margin: 0;
+  color: #2A4262;
+padding: 28px 0px;
+text-transform: uppercase;
+}
+.info > p {
+  font-family: 'Roboto', sans-serif;
+font-style: normal;
+font-weight: 300;
+font-size: 18px;
+color: #2A4262;
+font-size: 16px;
+text-align: center;
+}
+
+.box >.box-icon {
+  border: 2px solid #001c43;
+}
+.box:hover >.box-icon {
+border: 2px solid #001c43;
+background-color: #fff;
+color: #001c43;
+-webkit-transition: All 0.5s ease;
+-moz-transition: All 0.5s ease;
+-o-transition: All 0.5s ease;
+}
+.box:hover >.box-icon >span {
+color: #001c43;
+}
+.box-icon {
+background-color: #001c43;
+border-radius: 50%;
+display: table;
+height: 120px;
+margin: 0 auto;
+width: 120px;/*margin-top: -61px;*/
+}
+.containerp {
+  background: #D5D9E0;
+  width: 100%;
+}
