--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,13 +16,14 @@ $body: 'Roboto', sans-serif;
 // }
 
 .containere {
-  background: $white;
+  background: #E8EAEE;
   width: 540px;
   min-height: 480px;
   margin: 0 auto;
   position: relative;
   margin-top: 10%;
-  box-shadow: 2px 5px 20px rgba($gray, .5);
+  box-shadow: 2px 2px 31px 10px rgba(9, 13, 27, 0.31);
+  border-radius: 50px;
 }
 
 .logo1 {
@@ -36,45 +37,24 @@ $body: 'Roboto', sans-serif;
   letter-spacing: 1px;
 }
 
-.CTA {
-  width: 80px;
-  height: 40px;
-  right: -20px;
-  bottom: 0;
-  margin-bottom: 90px;
-  position: absolute;
-  z-index: 1;
-  background: $green;
-  font-size: 1em;
-  transform: rotate(-90deg);
-  transition: all .5s ease-in-out;
-  cursor: pointer;
-  h1 {
-    color: $white;
-    margin-top: 10px;
-    margin-left: 9px;
-  }
-  &:hover {
-    background: $aqua;
-    transform: scale(1.1);
-  }
-}
-
 .leftbox {
   float: left;
-  top: -5%;
+  top: 5%;
   left: 5%;
   position: absolute;
   width: 15%;
-  height: 110%;
-  background: $green;
-  box-shadow: 3px 3px 10px rgba($gray, .5);
+  height: auto;
+  background: #F1F3F9;
+  border: 2px solid #FFFFFF;
+  box-sizing: border-box;
+  box-shadow: 3px 4px 20px -4px rgba(64, 89, 166, 0.3);
+  border-radius: 63px;
 }
 
 nav a {
   list-style: none;
-  padding: 35px;
-  color: $white;
+  padding: 30px;
+  color: #556882;
   font-size: 1.1em;
   display: block;
   transition: all .3s ease-in-out;
@@ -145,7 +125,7 @@ nav a {
   text-transform: uppercase;
   font-size: 10px;
   border: none;
-  color: $aqua;
+  color: #556882;
 }
 
 .btn:hover {
