--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,22 +11,19 @@ $hulu: 'Nunito Sans', sans-serif;
 $heading: 'Montserrat', sans-serif;
 $body: 'Roboto', sans-serif;
 
-// body {
-//   background: linear-gradient(to right, $aqua, $green);
-// }
-
-.containere {
+.containere { 
   background: #E8EAEE;
-  width: 540px;
+  width: 850px;
   min-height: 480px;
-  margin: 0 auto;
+  margin-inline-start: 100px;
   position: relative;
-  margin-top: 10%;
-  box-shadow: 2px 2px 31px 10px rgba(9, 13, 27, 0.31);
+  margin-top: 50px;
+  box-shadow: 2px 2px 31px 10px rgba(0,28,67, 0.31);
   border-radius: 50px;
+  display: flex;
 }
 
-.logo1 {
+.logo {
   float: right;
   margin-right: 12px;
   margin-top: 12px;
@@ -37,29 +34,53 @@ $body: 'Roboto', sans-serif;
   letter-spacing: 1px;
 }
 
-.leftbox {
-  float: left;
-  top: 5%;
-  left: 5%;
+.CTA {
+  width: 80px;
+  height: 40px;
+  right: -20px;
+  bottom: 0;
+  margin-bottom: 90px;
   position: absolute;
-  width: 15%;
-  height: auto;
-  background: #F1F3F9;
+  z-index: 1;
+  background: $green;
+  font-size: 1em;
+  transform: rotate(-90deg);
+  transition: all .5s ease-in-out;
+  cursor: pointer;
+  h1 {
+    color: $white;
+    margin-top: 10px;
+    margin-left: 9px;
+  }
+  &:hover {
+    background: $aqua;
+    transform: scale(1.1);
+  }
+}
+
+.leftbox {
+  background: #D1D6DD;
   border: 2px solid #FFFFFF;
   box-sizing: border-box;
   box-shadow: 3px 4px 20px -4px rgba(64, 89, 166, 0.3);
   border-radius: 63px;
+  float: left;
+  top: 5%;
+  left: 5%;
+  position: absolute;
+  width: 9%;
+  height: 90%;
 }
 
 nav a {
   list-style: none;
   padding: 30px;
-  color: #556882;
+  color: #5D6F87;
   font-size: 1.1em;
   display: block;
   transition: all .3s ease-in-out;
   &:hover {
-    color: $aqua;
+    color: #001c43;
     transform: scale(1.2);
     cursor: pointer;
   }
@@ -69,20 +90,19 @@ nav a {
 }
 
 .active {
-  color: $aqua;
+  color: #001c43;
 }
 
 .rightbox {
   float: right;
-  width: 60%;
+  width: 100%;
   height: 100%;
 }
 
-
 .profile, .payment, .subscription, .privacy, .settings {
   transition: opacity .5s ease-in;
-  position: absolute;
-  width: 70%;
+  margin-left: 20rem;
+  margin-bottom: 5rem;
 }
 
 .containere h1 {
@@ -97,7 +117,6 @@ nav a {
   color: $gray;
   font-family: $body;
   width: 80%;
-  text-transform: uppercase;
   font-size: 8px;
   letter-spacing: 1px;
   margin-left: 2px;
@@ -119,20 +138,6 @@ nav a {
   color: $gray;
 }
 
-.btn {
-  float: right;
-  font-family: $body;
-  text-transform: uppercase;
-  font-size: 10px;
-  border: none;
-  color: #556882;
-}
-
-.btn:hover {
-  text-decoration: underline;
-  font-weight: 900;
-}
-
 .containere input {
   border: 1px solid lighten($gray,40%); 
   font-family: $body;
@@ -149,7 +154,8 @@ nav a {
 }
 
 .noshow {
-  opacity: 0;
+  display: none;
+  // opacity: 0;
 }
 
 footer {
@@ -172,5 +178,97 @@ footer {
     &:hover {
       color: #7d7d7d;
     }
+  }
+}
+
+/* cards inside timeline */
+
+.card {
+  border: none;
+}
+.card-img {
+  border-radius: 0;
+}
+
+.vgr-cards {
+  .card {
+    display: flex;
+    flex-flow: wrap;
+    flex: 100%;
+    margin-bottom: 40px;
+    height: 450px;
+
+    &:nth-child(even) .card-img-body {
+      order: 2;
+    }
+
+    &:nth-child(even) .card-body {
+      padding-left: 0;
+      padding-right: 1.25rem; 
+    }
+    
+    @media (max-width: 576px) {
+      display: block;
+    }
+    
+  }
+
+  .card-title {
+    position: relative;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 60px;
+    text-align: center;
+    color: #344FA1;
+      }
+
+  .card-body .card-text p{
+    position: relative;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 30px;
+    color: #344FA1;
+  }
+  .card-img-body {
+    flex: 1;
+    overflow: hidden;
+    position: relative;
+    
+    @media (max-width: 576px) {
+      width: 100%;
+      height: 200px;
+          margin-bottom: 20px;
+    }
+    
+  }
+  
+  .card-img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    
+    @media (max-width: 1140px) {
+          margin: 0;
+    transform: none;
+    width: 100%;
+    height: 100%;
+    }
+    
+  }
+
+  .card-body {
+    flex: 2;
+    padding: 0 0 0 1.25rem;
+    
+    @media (max-width: 576px) {
+      padding: 0;
+    }
+    
   }
 }
