--- a/scss/style.css
+++ b/scss/style.css
@@ -189,3 +189,112 @@ footer a {
 footer a:hover {
   color: #7d7d7d;
 }
+
+/* cards inside timeline */
+.card {
+  border: none;
+}
+
+.card-img {
+  border-radius: 0;
+}
+
+.vgr-cards .card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: wrap;
+      flex-flow: wrap;
+  -webkit-box-flex: 100%;
+      -ms-flex: 100%;
+          flex: 100%;
+  margin-bottom: 40px;
+  height: 450px;
+}
+
+.vgr-cards .card:nth-child(even) .card-img-body {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.vgr-cards .card:nth-child(even) .card-body {
+  padding-left: 0;
+  padding-right: 1.25rem;
+}
+
+@media (max-width: 576px) {
+  .vgr-cards .card {
+    display: block;
+  }
+}
+
+.vgr-cards .card-title {
+  position: relative;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 60px;
+  text-align: center;
+  color: #344FA1;
+}
+
+.vgr-cards .card-body .card-text p {
+  position: relative;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 30px;
+  color: #344FA1;
+}
+
+.vgr-cards .card-img-body {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  overflow: hidden;
+  position: relative;
+}
+
+@media (max-width: 576px) {
+  .vgr-cards .card-img-body {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 20px;
+  }
+}
+
+.vgr-cards .card-img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  margin-left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+@media (max-width: 1140px) {
+  .vgr-cards .card-img {
+    margin: 0;
+    -webkit-transform: none;
+            transform: none;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.vgr-cards .card-body {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+  padding: 0 0 0 1.25rem;
+}
+
+@media (max-width: 576px) {
+  .vgr-cards .card-body {
+    padding: 0;
+  }
+}
+/*# sourceMappingURL=style.css.map */
