--- a/css/style.css
+++ b/css/style.css
@@ -1183,8 +1183,8 @@ text-align: left;
   margin-bottom: 40px;
   text-align: center;
   color: #001c43;
-  margin-left: 350px;
-  margin-right: 350px;
+  margin-left: 25rem;
+  margin-right: 25rem;
   margin-bottom: 50px;
 
 }
@@ -1197,7 +1197,7 @@ text-align: left;
   margin-bottom: 60px;
   border: none !important;
   box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2);
-  margin: auto;
+  
 }
 
 .cform .blue-text {
