--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600;700&display=swap');
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap");
 
 body
 {
@@ -38,7 +39,7 @@ body
   border-right:solid 1px #ccc;
 }
 /* sign up link button and toggle button */
-#button-link ,#toogle-button
+.navbar #button-link ,.navbar #toogle-button
 {
   color:#f2f2f2;
   border-style: solid;
@@ -49,7 +50,7 @@ body
   line-height: 17px;
   
 }
-#button-link1{
+.navbar #button-link1{
   color:#f2f2f2;
   border: 2px solid #344FA1;
   box-sizing: border-box;
@@ -57,7 +58,7 @@ body
   margin-left: 10px;
   margin-right: 10px;
 }
-#button-link a
+.navbar #button-link a
 {
   color:#f2f2f2;
 }
@@ -1191,31 +1192,79 @@ text-align: left;
 
 /* cform */
 
+.cform{
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  background-color: #D5D9E0;
+  
+}
 .cform .card {
+  display: flex;
+  justify-content: center;
   padding: 30px 40px;
   margin-top: 60px;
   margin-bottom: 60px;
   border: none !important;
-  box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2);
+  margin-left:30vh;
   
 }
 
 .cform .blue-text {
-  color: #00BCD4
-}
+  font-family: 'Source Sans Pro',sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+  margin-left:55vh;
+  color: #344FA1;
+  }
 
 .cform .form-control-label {
-  margin-bottom: 0
+  font-family: 'Source Sans Pro',sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
+  color: #344FA1;
+  display: flex;
+  /* justify-content: center; */
+  margin-bottom: 0;
+  margin-left:30vh;
+  margin-bottom: 20px;
 }
 
-.cform input,.cform textarea,.cform button {
-  padding: 8px 15px;
-  border-radius: 5px !important;
-  margin: 5px 0px;
+.cform input{
+  display: flex;
+  justify-content: center;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.25);
+  border-radius: 50px !important;
+  padding: 15px 46px;
+  /* margin: 5px; */
+  margin:0 15em;
   box-sizing: border-box;
   border: 1px solid #ccc;
   font-size: 18px !important;
-  font-weight: 300
+  margin-bottom: 40px;
+  font-weight: 300;
+}
+.cform textarea {
+  background: #FFFFFF;
+  box-shadow: 0px 4px 8px -1px rgba(0, 0, 0, 0.25);
+  border-radius: 50px !important;
+  padding: 15px 26px;
+  /* margin: 5px; */
+  /* margin:0 10em; */
+  /* margin: auto; */
+  /* margin-right:50px; */
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  font-size: 18px !important;
+  font-weight: 300;
+  text-align: center;
 }
 
 .cform input:focus,.cform textarea:focus {
@@ -1227,15 +1276,22 @@ text-align: left;
   font-weight: 400
 }
 
-.cform .btn-block {
+.cform .bttn-block {
+  background: #8566FF;
+  border-radius: 50px;
+  display: flex;
+  padding: 30px;
+  justify-content: center;
   text-transform: uppercase;
   font-size: 15px !important;
   font-weight: 400;
   height: 43px;
-  cursor: pointer
+  cursor: pointer;
+  margin-top: 30px;
+  margin-left:62vh;
 }
 
-.cform .btn-block:hover {
+.cform .bttn-block:hover {
   color: #fff !important
 }
 
@@ -1244,4 +1300,260 @@ text-align: left;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
   outline-width: 0
+}
+.cform h3{
+  font-family:'Source Sans Pro',sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 60px;
+  /* text-align: center; */
+  color: #344FA1;
+  margin-top: 40px;
+  margin-left:60vh;
+}
+
+.faq h1{
+  font-family: 'Source Sans Pro',sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 80px;
+  text-align: center;
+  color: #344FA1;
+  margin-top:150px;
+  margin-bottom: 60px;
+}
+
+.faq h6{
+  font-family: 'Source Sans Pro',sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 35px;
+  line-height: 60px;
+  color: #344FA1;
+}
+
+.faq p{
+  font-family: Source Sans Pro;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 25px;
+  color: #344FA1;
+  margin-bottom: 35px;
+}
+
+hr.new4 {
+  border: 1px solid #9B5DE5;;
+}
+/* Please Subscribe My Youtube Channel
+https://www.youtube.com/channel/UC_osRDuNAp1ZZxKckdKlNsw?sub_confirmation=1
+*/
+
+/*==================== 
+	Footer 
+====================== */
+
+/* Main Footer */
+footer .main-footer {
+  padding: 20px 0;
+  background: #ffffff;
+}
+footer ul {
+  padding-left: 0;
+  list-style: none;
+}
+
+/* Copy Right Footer */
+.footer-copyright {
+  background: #222;
+  padding: 5px 0;
+  display: none;
+}
+.footer-copyright .logo {
+  display: inherit;
+}
+.footer-copyright nav {
+  float: right;
+  margin-top: 5px;
+}
+.footer-copyright nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.footer-copyright nav ul li {
+  border-left: 1px solid #505050;
+  display: inline-block;
+  line-height: 12px;
+  margin: 0;
+  padding: 0 8px;
+}
+.footer-copyright nav ul li a {
+  color: #969696;
+}
+.footer-copyright nav ul li:first-child {
+  border: medium none;
+  padding-left: 0;
+}
+.footer-copyright p {
+  color: #969696;
+  margin: 2px 0 0;
+}
+
+/* Footer Top */
+.footer-top {
+  background: #fff;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  border-bottom: 3px solid #222;
+}
+
+/* Footer transparent */
+footer.transparent .footer-top,
+footer.transparent .main-footer {
+  background: transparent;
+}
+footer.transparent .footer-copyright {
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.3);
+}
+
+/* Footer light */
+footer.light .footer-top {
+  background: #fff;
+}
+footer.light .main-footer {
+  background: #fff;
+}
+footer.light .footer-copyright {
+  background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3);
+}
+
+/* Footer 4 */
+.footer- .logo {
+  display: inline-block;
+}
+
+/*==================== 
+	Widgets 
+====================== */
+.widget {
+  padding: 20px;
+  margin-bottom: 40px;
+}
+.widget.widget-last {
+  margin-bottom: 0px;
+}
+.widget.no-box {
+  padding: 0;
+  background-color: transparent;
+  margin-bottom: 40px;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  -ms-box-shadow: none;
+  -o-box-shadow: none;
+}
+.widget.subscribe p {
+  margin-bottom: 18px;
+}
+.widget li a {
+  color: #344FA1;
+}
+.widget li a:hover {
+  color: #4b92dc;
+}
+.widget-title {
+  margin-bottom: 20px;
+  font-family: 'Source Sans Pro',sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 45px;
+  color: #344FA1;
+}
+.widget-title span {
+  background: #839fad none repeat scroll 0 0;
+  display: block;
+  height: 1px;
+  margin-top: 25px;
+  position: relative;
+  width: 40%;
+}
+.widget-title span::after {
+  background: inherit;
+  content: "";
+  height: inherit;
+  position: absolute;
+  top: -4px;
+  width: 50%;
+}
+.widget-title.text-center span,
+.widget-title.text-center span::after {
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+}
+.widget .badge {
+  float: right;
+  background: #7f7f7f;
+}
+
+.typo-light h1,
+.typo-light h2,
+.typo-light h3,
+.typo-light h4,
+.typo-light h6,
+.typo-light p,
+.typo-light div,
+.typo-light span,
+.typo-light small {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  color: #344FA1;
+}
+
+ul.social-footer2 {
+  margin: 0;
+  padding: 0;
+  width: auto;
+}
+ul.social-footer2 li {
+  display: inline-block;
+  padding: 0;
+}
+ul.social-footer2 li a:hover {
+  background-color: rgb(197, 197, 197);
+}
+ul.social-footer2 li a {
+  display: block;
+  height: 30px;
+  width: 30px;
+  text-align: center;
+  font-size: 25px;
+  color: #344FA1;
+}
+.btn {
+  background-color: #344FA1;
+  color: #fff;
+}
+.btn:hover,
+.btn:focus,
+.btn.active {
+  background: #344FA1;
+  color: #fff;
+  -webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  -ms-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  -o-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  -webkit-transition: all 250ms ease-in-out 0s;
+  -moz-transition: all 250ms ease-in-out 0s;
+  -ms-transition: all 250ms ease-in-out 0s;
+  -o-transition: all 250ms ease-in-out 0s;
+  transition: all 250ms ease-in-out 0s;
 }
