--- a/css/signup-style.css
+++ b/css/signup-style.css
@@ -410,11 +410,11 @@ button:hover {
 }
 
 .social-media a.fb {
-    background: #3b5998;
+    background: #DD4B39;
     color: #fff;
 }
 .social-media a.fb:hover {
-    background: #314e8a;
+    background: #DD4B39;
 }
 .social-media a.tw {
     background: #1da1f2;
