--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,25 @@ width: 120px;/*margin-top: -61px;*/
     font-size: 14px;
     font-family: inherit;
   }
-  
+  .sform textarea {
+    line-height: 50px;
+    background: #fafafa;
+    -webkit-box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.08);
+    -moz-box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.08);
+    box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.08);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 15px;
+    padding: 0 10px;
+    font-size: 16px;
+    color: #666;
+    -webkit-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+    width: 35rem;
+    border:none;
+  }
   .sform .input--style-4 {
     line-height: 50px;
     background: #fafafa;
@@ -186,7 +204,7 @@ width: 120px;/*margin-top: -61px;*/
     box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.08);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    border-radius: 5px;
+    border-radius: 15px;
     padding: 0 10px;
     font-size: 16px;
     color: #666;
