--- a/scss/style.scss
+++ b/scss/style.scss
@@ -69,17 +69,19 @@ $body: 'Roboto', sans-serif;
   float: left;
   top: 5%;
   left: 5%;
+  bottom: 5%;
   position: absolute;
-  width: 9%;
+  width: 8%;
   height: 90%;
 }
 
 nav a {
   list-style: none;
-  padding: 30px;
+  padding: 18px;
   color: #5D6F87;
-  font-size: 1.1em;
+  font-size: 1.2em;
   display: block;
+  text-align: center;
   transition: all .3s ease-in-out;
   &:hover {
     color: #001c43;
@@ -87,7 +89,7 @@ nav a {
     cursor: pointer;
   }
   &:first-child {
-    margin-top: 7px;
+    margin-top: 6px;
   }
 }
 
@@ -101,7 +103,7 @@ nav a {
   height: 100%;
 }
 
-.profile, .payment, .subscription, .privacy, .settings {
+.profile, .payment, .subscription, .privacy, .settings,.mobile,.bitcoin,.twitter,.facebook {
   transition: opacity .5s ease-in;
   margin-left: 20rem;
   margin-bottom: 5rem;
